# q-translator

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  translator.py
.github/workflows/: python-app.yml
src/: config.py  main.py  translator.py  utils.py
